# tasuki

./: .gitignore  DESIGN.md  README.ja.md  README.md  cli.py  pyproject.toml
.tasuki/config/: tasuki.yaml
config/prompts/: planner_system.txt  worker_system.txt
tasuki/: __init__.py  cli.py  config.py  handoff.py  llm.py  log.py  planner.py  planner_registry.py  repo.py  runner.py  task_store.py  worker.py
tasuki/_defaults/: tasuki.yaml
